change 1 done by kim

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
             <h1 class="text-center">Testing index html.</h1>
-
+            <p>change 1 done by kim</p>
     </body>
 </html>
