second change added to beta

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
             <h1 class="text-center">Testing index html.</h1>
             <p>change 1 done by kim</p>
+            <p>change 2, done by werner</p>
     </body>
 </html>
