change done by bernat on branch1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </head>
     <body>
             <h1 class="text-center">Testing index html.</h1>
-
+            <p> change done by bernat</p>
     </body>
 </html>
